--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer {
 /* Typewriter glow */
 .clickable-typewriter {
   color: #f1c40f;
-  font-size: 20px;
+  font-size: 14px;
   cursor: pointer;
   text-shadow:
     2px 2px 4px #000,
@@ -139,7 +139,7 @@ footer {
 }
 
 .clickable-typewriter.clicked {
-  text-shadow: none;
+  text-shadow: black;
   color: white;
   animation: none;
 }
