--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ footer {
 }
 /* Typewriter glow */
 .clickable-typewriter {
-  color: #f1c40f;
+  color: #808080;
   font-size: 14px;
   cursor: pointer;
   text-shadow:
