--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ html, body {
   gap: 15px;
 }
 .icon {
+ flex-direction: row-reverse; /* Right-to-left order */
+  gap: 20px;
+  margin-top: 20px;
   width: 60px;
   height: 60px;
   display: flex;
