--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
     font-family: 'Rabar 021';
     src: url('fonts/Rabar_021.ttf') format('truetype');
   }
-
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden; /* stops scrolling */
+}
   body {
     margin: 0;
     height: 100vh;
@@ -104,4 +109,5 @@ img  {
     opacity: 1;
 
 }
+
 
